2007-08-06  Murad Tagirov  <tmurad@gmail.com>

    Added initial support of serialization of kml
    objects to memory stream. In order to serialize any
    object class must be inherited from Serializable abastract class
    * src/lib/kml/Serializable.h: new file
    * src/lib/placemarkmanager.cpp
    * src/lib/kml/KMLFeature.{h,cpp}
    * src/lib/kml/KMLObject.{h,cpp}
    * src/lib/kml/KMLPlaceMarkParser.cpp
    * src/lib/kml/KMLContainer.{h,cpp}

2007-08-06  Torsten Rahn  <rahn@kde.org>

    - Cleaned up some "GPS" method names that are not really
      limited to GPS usage after question from Prashanth Udupa.
    - removed "timeout" signal from MarbleWidget as it seems
      to have been moved to MarbleModel.
      Andrew: I hope you're fine with these changes - otherwise
      tell me :-)

    * example2.ui
    * src/MarbleControlBox.{h,cpp}
    * src/lib/MarbleWidget.{h,cpp}
    * src/lib/MarbleWidgetInputHandler.{h,cpp}

2007-08-06  Torsten Rahn  <rahn@kde.org>

    - Clean up GlobeScanlineTextureMapper class
    - Use memcpy for interlaced mode

    * src/lib/GlobeScanlineTextureMapper.{h,cpp}

2007-08-06  Murad Tagirov  <tmurad@gmail.com

    Parse Marble's placemark specific fields
    "role" and "pop". Should use schema instead in feature
    * src/lib/kml/KMLDocumentParser.cpp
    * src/lib/kml/KMLFeature.{h,cpp}
    * src/lib/kml/KMLPointParser.cpp
    * src/lib/kml/KMLPlaceMarkParser.{h,cpp}

2007-08-05  Torsten Rahn  <rahn@kde.org>

    Starting to add "View" menu entry to Marble:
    - Show Navigation Panel, Full Screen, Status Bar
    Currently only available for the Qt4 version.
    TODO for tonight:
    - Add QSetting to save QMainWindow settings
    - Port the changes to the KDE version of Marble
    * src/katlascontrol.{h,cpp}
    * src/QtMainWindow.{h,cpp}

2007-08-05  Inge Wallin  <inge@lysator.liu.se>

	Compile!
	* src/lib/kml/KMLFeatureParser.cpp (characters): remove a variable.
	At least gcc 4.1.2 didn't like the previous code.
